--- a/index.html
+++ b/index.html
@@ -118,6 +118,7 @@
 							<div class="card text-white ">
 								<div class="">
 									<h3 class="card-title text-light">Today's Sales</h3>
+									<h3 class="card-title text-light">Today's Sales</h3>
 									<p class="card-text">Sales Summary</p>
 									<div class="row mt-5">
 
@@ -207,67 +208,6 @@
 							<div class="card">
 								<div class=" text-white">
 									<h3 class="card-title text-light">Top Products</h3>
-									<!-- <table class="table ">
-										<thead class="bg-dark">
-											<tr class="">
-												<th scope="col">#</th>
-												<th scope="col">Name</th>
-												<th scope="col">Popularity</th>
-												<th scope="col">Sales</th>
-											</tr>
-										</thead>
-										<tbody>
-											<tr>
-												<th scope="row">01</th>
-												<td>Home Decore Range</td>
-												<td>
-													<div class="progress" role="progressbar"
-														aria-label="Warning example" aria-valuenow="75"
-														aria-valuemin="0" aria-valuemax="100" style="height: 5px;">
-														<div class="progress-bar " style="width: 85%; background-color: #FCB859; "></div>
-													</div>
-												</td>
-												<td><span class="badge badge-danger-lighten">46%</span></td>
-											</tr>
-											<tr>
-												<th scope="row">02</th>
-												<td>Disney Princess Dress</td>
-												<td>
-													<div class="progress" role="progressbar"
-														aria-label="Warning example" aria-valuenow="75"
-														aria-valuemin="0" aria-valuemax="100" style="height: 5px;">
-														<div class="progress-bar " style="width: 70%; background-color: #A9DFD8; "></div>
-													</div>
-												</td>
-												<td>@fat</td>
-											</tr>
-											<tr>
-												<th scope="row">03</th>
-												<td>Bathroom Essentials</td>
-												<td>
-													<div class="progress" role="progressbar"
-														aria-label="Warning example" aria-valuenow="75"
-														aria-valuemin="0" aria-valuemax="100" style="height: 5px;">
-														<div class="progress-bar " style="width: 45%; background-color: #28AEF3;"></div>
-													</div>
-												</td>
-												<td>@fat</td>
-											</tr>
-											<tr>
-												<th scope="row">04</th>
-												<td>Apple Smartwatch</td>
-												<td>
-													<div class="progress" role="progressbar"
-														aria-label="Warning example" aria-valuenow="75"
-														aria-valuemin="0" aria-valuemax="100" style="height: 5px;">
-														<div class="progress-bar " style="width: 30%; background-color: #F2C8ED;"></div>
-													</div>
-												</td>
-												<td>@twitter</td>
-											</tr>
-										</tbody>
-									</table> -->
-
 
 									<div class="table-responsive ">
 										<table class="table table-centered table-nowrap mb-0 text-light ">
