--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 							<div class="card text-white ">
 								<div class="">
 									<h3 class="card-title text-light">Today's Sales</h3>
-									<h3 class="card-title text-light">Today's Sales</h3>
+									<h3 class="card-title text-light">murshid</h3>
 									<p class="card-text">Sales Summary</p>
 									<div class="row mt-5">
 
